# whatsapp-fragmenter

./: .env.example  .gitignore  CLAUDE.md  MEMORY.md  START-DEBUG.BAT  START.bat  TESTED_MODELS.md  _extract_script.ps1  _server.err  index.html  package.json  scan-workspace.js  server.js  workspace-data.json
.app/: scan-workspace.js
.claude/: launch.json
.workspace_app/: .gitignore  CLAUDE.md  index.html  server.js  styles.css  workspace-data.json
.workspace_app/.claude/: launch.json
AMAZON-KDP/: CLAUDE.md  EL DIPUTADO NICOLAI - Ficha Técnica KDP.md  Modelos Ollama para Novelas.md  Optimización de Ficha KDP.md
AMAZON-KDP/.claude/: launch.json
APLICACION/.specify/: constitution.md
CLAUDE_KIT/: CLAUDE.md  CLAUDEKIT_CHEAT_SHEET.md  CLAUDEKIT_GUIA_COMPLETA.md  CLAUDEKIT_INDICE.md  CLAUDEKIT_RECETAS_PRACTICAS.md  Gestión de Memoria y Contexto en Claude Code.md  Guía de Automatización y Gestión de Memoria con Claudekit.md  Guía de Gestión y Memoria en Claude Code.md  MEMORY.md  README.md
CLAUDE_KIT/.claude/: settings.json
IMG-GEN-TEST/.claude/: .mcp.json  settings.json
IMG_GEN_BLANK_TPL/: .mcp.json  pyproject.toml
NICOLAI/: CLAUDE.md
TEST/: check_shifts.py  compare_toc.py  dump_pdf_pages.py  dump_pdf_toc.py  inspect_doc.py  read_docx_toc.py  search_docx.py  smart_parse_toc.py
_PRIMA/.claude/: launch.json
model-tester/: MEMORY.md  index.html
outletnina.com/: Gemini_Generated_Image_53t8q553t8q553t8.xcf  LAUNCH.bat  index.html  lobehub-market-cli-0.0.38.tgz  package-lock.json  package.json  server.js
public/: styles.css
src/cli/: index.js
(+74 files in other folders)
