[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-gen-mcp"
version = "0.1.0"
description = "Image Generation MCP Server using Pollinations.ai"
requires-python = ">=3.8"
dependencies = [
    "mcp>=0.1.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
packages = ["image_gen_mcp"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
image_gen_mcp = ["py.typed"]
